--- a/src/styles/utils/newsletter.scss
+++ b/src/styles/utils/newsletter.scss
@@ -54,6 +54,7 @@
     color: $color-white;
     display: flex;
     text-align: center;
+    justify-content: center;
     font-family: "IBM Plex Sans", sans-serif;
     font-size: 18px;
     font-weight: 400;
