--- a/src/styles/utils/page.scss
+++ b/src/styles/utils/page.scss
@@ -11,7 +11,8 @@
     top: 0;
     right: 0;
     left: 0;
-    opacity: 0;
+    // opacity: 0;
+    z-index: 0;
     pointer-events: none;
     transition: all $time-transition;
     transform: translateX(-100%);
