--- a/src/styles/utils/top-bar.scss
+++ b/src/styles/utils/top-bar.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  // gap: 88px;
+  z-index: 0;
   grid-column: span 2;
 
   @include onTablet {
