--- a/src/styles/utils/romantic.scss
+++ b/src/styles/utils/romantic.scss
@@ -2,20 +2,24 @@
   position: absolute;
   background-image: url(../images/romantic.png);
   background-repeat: no-repeat;
-  background-size: 100% 210px;
-  object-fit: cover;
-  background-position: top;
+  background-size: cover;
+
+  width: 100%;
+  height: 210px;
+  background-position: top center;
 
   @include onTablet {
-    background-size: 100% 390px;
-    left: 39px;
-    right: 39px;
+    height: 390px;
+    width: 700px;
+    left: 34px;
+    right: 34px;
   }
 
   @include onDesktop {
     left: 0;
     right: 0;
-    background-size: 100% ;
+    height: 550px;
+    width: 100%;
   }
 
   &__main {
@@ -45,10 +49,12 @@
 
   &__top {
     display: flex;
+    justify-content: center;
     margin-bottom: 20px;
 
     @include onTablet {
       margin-bottom: 23px;
+      justify-content: left;
     }
 
     @include onDesktop {
@@ -133,7 +139,7 @@
     margin-bottom: 40px;
     grid-column: span 2;
     margin-top: 100px;
-    
+
     @include onTablet {
       display: none;
     }
