add task solution

--- a/src/styles/utils/image.scss
+++ b/src/styles/utils/image.scss
@@ -3,6 +3,7 @@
 
   @include onTablet {
     display: flex;
+    flex-direction: column;
     position: relative;
     margin-top: 515px;
     padding-block: 0 92px;
