--- a/src/styles/utils/romantic.scss
+++ b/src/styles/utils/romantic.scss
@@ -10,9 +10,7 @@
 
   @include onTablet {
     height: 390px;
-    width: 700px;
-    left: 34px;
-    right: 34px;
+    width: 100%;
   }
 
   @include onDesktop {
