--- a/src/styles/utils/header.scss
+++ b/src/styles/utils/header.scss
@@ -17,12 +17,12 @@
   &__image {
     background-image: url(../images/bg-header.png);
     background-repeat: no-repeat;
-    background-position: center;
+   
     background-size: cover;
     position: absolute;
     margin-bottom: 20px;
     height: 300px;
-    width: 320px;
+    width: 100%;
 
     @include onTablet {
       // background-position: top right;
@@ -85,6 +85,7 @@
     @include onTablet {
       grid-row: 3;
       margin-bottom: 19px;
+      justify-content: flex-start;
     }
 
     @include onDesktop {
