--- a/src/styles/utils/newsletter.scss
+++ b/src/styles/utils/newsletter.scss
@@ -17,6 +17,7 @@
   &__topi {
     grid-column: span 2;
     display: flex;
+    align-items: center;
     flex-direction: column;
     gap: 20px;
 
