add task solution

--- a/src/styles/utils/section-tittle.scss
+++ b/src/styles/utils/section-tittle.scss
@@ -12,6 +12,7 @@
     grid-column: span 4;
     margin-bottom: 48px;
     font-size: 48px;
+    text-align: left;
   }
 
   @include onDesktop {
@@ -28,7 +29,7 @@
     margin-bottom: 40px;
     grid-column: span 2;
     margin-top: 100px;
-    
+
     @include onTablet {
       margin-bottom: 48px;
       grid-column: 1/4;
