--- a/src/styles/utils/footer.scss
+++ b/src/styles/utils/footer.scss
@@ -40,6 +40,7 @@
     margin-bottom: 40px;
     align-items: center;
     gap: 149px;
+    justify-content: space-between;
 
     @include onTablet {
       grid-column: 1/1;
@@ -157,7 +158,7 @@
     margin-bottom: 20px;
 
     @include onDesktop {
-      display: none;
+      margin-top: 300px;
     }
   }
 
