--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,13 @@
 $c-gray: #eee;
+
+$tablet-min-width: 768px;
+$desktop-min-width: 1280px;
+
+$title-text-color: #000;
+$white: #fff;
+$text-color: #0f0e08;
+$border-color: #1a5a4c;
+$events-info-color: #687480;
+$events-text-color: #4e4e4e;
+$events-box-bg-color: #f14a27;
+$aside-bg-color: #18181a;
