add task solution

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -2,23 +2,23 @@
 @import "fonts";
 @import "typography";
 
-@import "./page.scss";
-@import "./container.scss";
-@import "./header/header.scss";
-@import "./header/nav.scss";
-@import "./header/icon.scss";
+@import "./page";
+@import "./container";
+@import "./header/header";
+@import "./header/nav";
+@import "./header/icon";
 
-@import "./main/main.scss";
-@import "./main/current-events.scss";
-@import "./main/events.scss";
-@import "./main/form-c-to-r.scss";
-@import "./main/follow.scss";
-@import "./main/galary.scss";
+@import "./main/main";
+@import "./main/current-events";
+@import "./main/events";
+@import "./main/form-c-to-r";
+@import "./main/follow";
+@import "./main/galary";
 
-@import "./footer/footer.scss";
-@import "./footer/icons.scss";
-@import "./footer/info.scss";
-@import "./footer/navi.scss";
-@import "./footer/text.scss";
+@import "./footer/footer";
+@import "./footer/icons";
+@import "./footer/info";
+@import "./footer/navi";
+@import "./footer/text";
 
-@import "./header/menu.scss";
+@import "./header/menu";
