--- a/src/styles/block/header.scss
+++ b/src/styles/block/header.scss
@@ -45,17 +45,20 @@
     right: 0;
     width: 100%;
     height: 300px;
+    
     background-size: cover;
-
     background-repeat: no-repeat;
-    background-image: url(../images/header/headerfon.svg);
+    background-position: 50%;
+    background-image: url(../images/header/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.png);
 
     @include onTablet {
-      width: 48%;
+      width: 50%;
       height: 384px;
+      background-image: url(../images/header/img-tablet.png);
     }
 
     @include onDesktop {
+      background-image: url(../images/header/img-desctop.png);
       width: 55%;
       height: 655px;
     }
