--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,13 @@
 $c-gray: #eee;
+$width-tablet: 640px;
+$width-desktop: 1280px;
+$plaseholder-button-color: #687480;
+$aside-text-color: #fff;
+$efect-durathion: 0.3s;
+$first-text-color: #0F0E08;
+$column-gap-mob: 20px;
+$column-gap-tab: 30px;
+$subscription-text-color: #fff;
+$wh-button: 50px;
+$tikets-border-color: #1A5A4C;
+$form-button-color: #F14A27;
