--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,20 @@
 @import "utils";
-@import "fonts";
 @import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "./blocks/body";
+@import "./blocks/button";
+@import "./blocks/header";
+@import "./blocks/top-bar";
+@import "./blocks/icon";
+@import "./blocks/tikets";
+@import "./blocks/aside";
+@import "./blocks/nav-aside";
+@import "./blocks/schedule";
+@import "./blocks/current-events";
+@import "./blocks/section-titile";
+@import "./blocks/gallery";
+@import "./blocks/slider";
+@import "./blocks/subscription";
+@import "./blocks/form";
+@import "./blocks/footer";
+@import "./blocks/contacts";
+@import "./blocks/nav-footer";
