--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,37 @@
 %h1 {
-  font-family: "Roboto", sans-serif;
+  font-family: Montserrat, sans-serif;
+  font-weight: 700;
+  margin: 0;
+}
+
+%h2 {
+  font-family: Montserrat, sans-serif;
   font-weight: 400;
+  margin: 0;
+}
+
+%h3 {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: 400;
+  margin: 0;
+}
+
+%h4 {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: 500;
+  margin: 0;
+}
+
+%p {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: 300;
+  line-height: 150%;
+  font-size: 16px;
+  margin: 0;
+}
+
+%a {
+  font-family: "IBM Plex Sans", sans-serif;
+  text-decoration: none;
+  color: inherit;
 }
