add task solution

--- a/src/styles/utils/image.scss
+++ b/src/styles/utils/image.scss
@@ -30,8 +30,10 @@
 
     @include onDesktop {
       flex-wrap: wrap;
+      justify-content: space-between;
       gap: 30px;
       grid-column: span 12;
+
     }
   }
 
@@ -82,8 +84,10 @@
     }
 
     @include onDesktop {
-      width: 370px;
       height: 600px;
+      width: 370px;
+      object-fit: cover;
+      // height: 600px;
     }
   }
 
@@ -101,8 +105,9 @@
 
     @include onDesktop {
       display: flex;
-      object-fit: cover;
-      right: 0;
+      // object-fit: cover;
+      max-width: fit-content;
+
       transition: transform $time-transition;
       cursor: pointer;
 
@@ -110,5 +115,11 @@
         transform: scale(1.03);
       }
     }
+  }
+
+  &__main {
+    max-width: fit-content;
+    width: 100%;
+    display: flex;
   }
 }
