add task solution

--- a/src/styles/blocks/body.scss
+++ b/src/styles/blocks/body.scss
@@ -31,7 +31,7 @@ html {
     top: 0;
     left: 0;
     opacity: 0;
-    transition: all $efectDurathion;
+    transition: all $efect-durathion;
     transform: translateY(-100%);
     pointer-events: none;
 
