--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -1,7 +1,5 @@
 .slider {
   position: relative;
-  overflow: hidden;
-  max-width: 600px;
 
   &__content {
     @include container;
@@ -9,7 +7,7 @@
     width: 100%;
 
     box-sizing: border-box;
-    overflow: auto;
+    overflow: hidden;
 
 
     &::-webkit-scrollbar {
@@ -24,7 +22,7 @@
     display: grid;
     grid-template-columns: repeat(var(--count-columns), 1fr);
     column-gap: $column-gap-mob;
-    width: 900px;
+    width: 400%;
 
     @include on-tablet {
       --count-columns: 12;
