--- a/src/styles/utils/footer.scss
+++ b/src/styles/utils/footer.scss
@@ -135,6 +135,13 @@
     font-weight: 400;
     line-height: 150%;
     text-decoration: none;
+    transition: transform $time-transition;
+    cursor: pointer;
+    transform-origin: right;
+
+    &:hover {
+      transform: scale(1.7);
+    }
   }
 
   &__infos {
@@ -146,6 +153,12 @@
     margin-top: 20px;
     text-decoration: none;
     margin-bottom: 0;
+    transition: transform $time-transition;
+    cursor: pointer;
+
+    &:hover {
+      transform: scale(1.5);
+    }
   }
 
   &__tops {
