fixed changes requests

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -129,7 +129,13 @@
   width: 130px;
 
   @include onTablet {
+    width: 200px;
+    margin-right: 60px;
+  }
+
+  @include onDesktop {
     width: auto;
+    margin: 0;
   }
 
   &-title {
@@ -138,9 +144,13 @@
 
   &-time {
     display: block;
+
+    @include onTablet {
+      display: inline-block;
+    }
   }
 }
-
+ 
 .menu {
   font-size: 14px;
 
