--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -2,7 +2,7 @@
   padding: 88px 20px;
   text-align: center;
   color: $white;
-  background: linear-gradient(rgba(255, 255, 255, 0.2), rgba(0, 0, 0, 0.8)),
+  background: linear-gradient(rgba(0, 0, 0, 0.75) 0%, rgba(0, 0, 0, 0.75) 100%),
     url("../images/blocks/subscribe/background__wide.jpg");
   background-size: cover;
   background-position: center;
