--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -39,15 +39,15 @@
 
   &__menu {
     &-page {
+      height: 399px;
       position: fixed;
       top: 0;
       left: 0;
       right: 0;
       padding-top: 30px;
-      height: 100vh;
       color: $white;
       background-color: $green;
-  
+
       transform: translateX(100%);
       transition: all 0.5s;
   
@@ -59,6 +59,12 @@
 
       @include onTablet {
         padding-top: 45px;
+        height: 225px;
+      }
+
+      @include onDesktop {
+        padding-top: 45px;
+        height: 233px;
       }
 
       &__wrapper {
@@ -100,6 +106,10 @@
       flex-direction: column;
       gap: 24px;
 
+      @include onTablet {
+        width: 130px;
+      }
+
       @include onDesktop {
         gap: 30px;
       }
@@ -133,7 +143,7 @@
         margin-top: 16px;
 
         @include onTablet {
-          margin-left: 38px;
+          margin-left: 35px;
           padding-top: 25px;
           width: 144px;
         }
