--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,6 @@
 $c-gray: #eee;
+$mobile-max-width: 320px;
+$tablet-max-width: 768px;
+$desktop-max-width: 1280px;
+$design-max-width: 1440px;
+$effect-duration: 0.3s;
