--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -4,3 +4,17 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face {
+  font-family: Montserrat, sans-serif;
+  src: url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "IBM Plex Sans", sans-serif;
+  src: url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&display=swap");
+  font-weight: normal;
+  font-style: normal;
+}
