--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,24 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "./blocks/header";
+@import "./blocks/page";
+@import "./blocks/menu";
+@import "./blocks/icon";
+@import "./blocks/relevance";
+@import "./blocks/gallery";
+@import "./blocks/subscription";
+@import "./blocks/information";
+@import "./blocks/schedule";
+@import "./blocks/contacts";
+@import "./blocks/footer";
+
+* {
+  box-sizing: border-box;
+}
 
 body {
+  margin: 0;
   background: $c-gray;
+  min-width: 320px;
 }
