--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,62 @@
 %h1 {
-  font-family: "Roboto", sans-serif;
+  font-family: Montserrat, sans-serif;
+  font-size: 45px;
+  font-weight: 700;
+  line-height: 45px;
+  text-align: center;
+}
+
+%h2 {
+  font-family: Montserrat, sans-serif;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 36px;
+  text-align: center;
+  margin: 0;
+
+  @include on-tablet {
+    font-size: 48px;
+    line-height: 48px;
+    text-align: left;
+  }
+}
+
+%h3 {
+  font-family: Montserrat, sans-serif;
+  font-size: 28px;
   font-weight: 400;
+  line-height: 28px;
+  text-align: left;
+  color: #0f0e08;
+  margin: 0;
+
+  @include on-tablet {
+    font-size: 36px;
+    line-height: 36px;
+  }
+}
+
+%h4 {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 16px;
+  text-align: left;
+  margin: 0;
+  color:  #687480;
+
+  @include on-tablet {
+    font-size: 14px;
+    line-height: 14px;
+  }
+}
+
+%h5 {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+  text-align: left;
+  margin: 0;
+  color:  #0f0e08;
 }
