--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,5 +1,4 @@
 .header {
-
 &__bg__image {
   box-sizing: border-box;
   position: absolute;
@@ -16,7 +15,6 @@
   }
 
   @include on-desktop {
-    width: 725px;
     height: 655px;
     background-position: center;
   }
@@ -59,7 +57,7 @@
     }
 
     @include on-desktop {
-      grid-column: 6 / 8;
+      grid-column: 7 / 9;
     }
 
     &-link {
@@ -177,33 +175,42 @@
 
   &__events {
     display: none;
+    flex-direction: column;
+    align-items: center;
+    text-decoration: none;
+    gap: 20px;
 
     @include on-desktop {
-      grid-column: 1 / 2;
-      position: relative;
-      display: block;
-      color: #687480;
-      font-family:"IBM Plex Sans", sans-serif;
-      font-size: 14px;
-      font-weight: 700;
-      line-height: 14px;
-      text-align: center;
-      text-transform: uppercase;
-      writing-mode: vertical-rl;
-      transform: scale(-1);
-      padding-top: 55px;
+      display: flex;
+      grid-column: 1/2;
     }
 
     &::before {
       @include on-desktop {
+        content: "";
         position: absolute;
         top: -20px;
         right: 8px;
-        content: "";
         width: 1px;
         height: 70px;
         background-color: #687480;
       }
+    }
+
+    &-text {
+      color: #687480;
+      font-size: 14px;
+      font-weight: 700;
+      line-height: 14px;
+      text-transform: uppercase;
+      writing-mode: vertical-rl;
+      transform: rotate(-180deg);
+    }
+
+    &-line {
+      width: 1px;
+      height: 70px;
+      background: #1a5a4c;
     }
   }
 }
