--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -1,37 +1,22 @@
 .subscription {
-
-  &__container {
-    padding-block: 0 50px;
-  }
-
-  &__content {
-    padding-inline: 20px;
-
-    @include on-tablet {
-      padding-inline: 154px;
-    }
-
-    @include on-desktop {
-      padding-inline: 355px;
-    }
-  }
+  padding-block: 0 50px;
 
   &__bg__image {
-    position: relative;
     background-image: url(/src/images/main/subscription/subscription-bg.svg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 50%;
     height: 386px;
-    display: flex;
-    align-items: center;
+    padding: 88px 20px;
 
     @include on-tablet {
       height: 380px;
+      padding: 82px 154px;
     }
 
     @include on-desktop {
       height: 550px;
+      padding: 163px 355px;
     }
   }
 
@@ -52,12 +37,11 @@
   &__description {
     font-family: "IBM Plex Sans", sans-serif;
     font-size: 18px;
-    font-weight: 400;
     line-height: 27px;
     text-align: center;
     color: #fff;
-    padding-top: 20px;
     padding-bottom: 50px;
+    padding-top: 20px;
     margin: 0;
 
     @include on-tablet {
@@ -72,10 +56,8 @@
 
   &__form {
     display: flex;
-    flex-direction: row;
-    width: 100%;
-    height: 50px;
     box-sizing: border-box;
+
 
     &__input {
       font-family: Montserrat, sans-serif;
@@ -88,16 +70,17 @@
       color: #687480;
       transition: border-color 0.3s ease-in-out;
       cursor: pointer;
-      outline: none;
+
+      &:focus {
+        outline: none;
+      }
 
       @include on-tablet {
         height: 70px;
-        width: 374px;
         margin-right: 16px;
       }
 
       @include on-desktop {
-        width: 470px;
         margin-right: 30px;
       }
     }
@@ -113,6 +96,10 @@
       cursor: pointer;
       border: none;
       transition: $effect-duration;
+
+      // &:focus {
+      //   outline: none;
+      // }
 
       &:hover {
         background-color: #1a5a4c;
