--- a/src/styles/blocks/aside.scss
+++ b/src/styles/blocks/aside.scss
@@ -9,8 +9,8 @@
   }
 
   &__container {
-    @include container;
-    
+    @include header-aside-container;
+
     padding-block: 27px;
     display: flex;
     flex-direction: column;
