--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -34,7 +34,7 @@
   }
 
   &__bottomn {
-    @include container;
+    @include header-aside-container;
     @include page-grid;
   }
 
@@ -113,6 +113,7 @@
     gap: 20px;
     align-items: center;
     display: none;
+    cursor: pointer;
 
     &::before {
       content: "";
@@ -121,6 +122,8 @@
       width: 70px;
       background-color: #1A5A4C;
     }
+
+    @include hover(transform, scale(1.1) rotate(-90deg));
 
     @include on-desktop {
       display: flex;
