--- a/src/styles/blocks/nav-footer.scss
+++ b/src/styles/blocks/nav-footer.scss
@@ -15,6 +15,6 @@
     font-family: "IBM Plex Sans", sans-serif;
     font-size: 14px;
 
-    @include hover(color, #425844);
+    @include hover(color, #00960c);
   }
 }
