--- a/src/styles/blocks/top-bar.scss
+++ b/src/styles/blocks/top-bar.scss
@@ -1,7 +1,7 @@
 .top-bar {
   box-sizing: border-box;
 
-  @include container;
+  @include header-aside-container;
   @include page-grid;
 
   position: relative;
