--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -35,6 +35,20 @@
   }
 }
 
+@mixin header-aside-container {
+  box-sizing: border-box;
+  padding-inline: 20px;
+
+  @include on-tablet {
+    padding-inline: 39px;
+  }
+
+  @include on-desktop {
+    padding-inline: 55px;
+
+  }
+}
+
 @mixin page-grid {
   --columns: 2;
 
@@ -44,7 +58,7 @@
 
   @include on-tablet {
     --columns: 6;
-    
+
     column-gap: $column-gap-tab;
   }
 
