--- a/src/styles/blocks/current-events.scss
+++ b/src/styles/blocks/current-events.scss
@@ -33,6 +33,7 @@
     background-color: #F14A27;
     width: 100%;
     object-fit: contain;
+    cursor: pointer;
 
     @include on-desktop {
       grid-column: 1 / 8;
