--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -45,6 +45,7 @@
     width: 100%;
     height: 100%;
     object-fit: contain;
+    cursor: pointer;
 
     @include on-tablet {
       grid-column: span 3;
