--- a/src/styles/blocks/section-titile.scss
+++ b/src/styles/blocks/section-titile.scss
@@ -2,6 +2,7 @@
   font-size: 36px;
   text-align: center;
   color: $first-text-color;
+  font-weight: 700;
 
   @include on-tablet {
     text-align: start;
