--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -16,7 +16,7 @@ p {
   font-family: Montserrat, sans-serif;
   scroll-behavior: smooth;
   background: $c-gray;
-  transition: $transition;
+  //transition: $transition;
 }
 
 .page__body {
