--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -2,3 +2,17 @@
   font-family: "Roboto", sans-serif;
   font-weight: 400;
 }
+
+body {
+  margin: 0;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+  color: currentColor;
+}
