implement dark side with menu

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -50,6 +50,23 @@
 
       transform: translateX(100%);
       transition: all 0.5s;
+
+      &::after {
+        content: "";
+        display: block;
+        margin-top: 22px;
+        height: 100vh;
+        background-color: #18181a;
+        opacity: 0.5;
+
+        @include onTablet {
+          margin-top: 34px;
+        }
+
+        @include onDesktop {
+          margin-top: 42px;
+        }
+      }
   
       &:target {
         transform: translateX(0);
@@ -143,7 +160,7 @@
         margin-top: 16px;
 
         @include onTablet {
-          margin-left: 35px;
+          margin-left: 30px;
           padding-top: 25px;
           width: 144px;
         }
