--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -69,6 +69,7 @@
     position: relative;
     display: flex;
     gap: 20px;
+    font-family: "IBM Plex Sans", sans-serif;
     font-size: 14px;
 
     &-wrapper {
@@ -92,6 +93,7 @@
 
   &__contacts {
     width: 128px;
+    line-height: 150%;
 
     @include onTablet {
       width: auto;
@@ -127,6 +129,8 @@
 
 .schedule {
   width: 130px;
+  font-weight: 400;
+  line-height: 150%;
 
   @include onTablet {
     width: 200px;
