--- a/src/styles/blocks/sections/_slider.scss
+++ b/src/styles/blocks/sections/_slider.scss
@@ -5,13 +5,13 @@
 }
 
 .swiper {
+  box-sizing: border-box;
   padding-inline: 20px;
-  width: 280px;
+  width: 100vw;
   height: 447px;
 
   @include on-tablet {
     padding-inline: 39px;
-    width: 700px;
     height: 584px;
   }
 }
