--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -9,3 +9,4 @@ $grey-text-color: #687480;
 $red-page-color: #f14a27;
 $slider-buttons-color: #e0e0e0;
 $placeholder-color: #687480;
+$dim-page-color: #18181a;
