add task solution

--- a/src/styles/utils/header.scss
+++ b/src/styles/utils/header.scss
@@ -17,20 +17,18 @@
   &__image {
     background-image: url(../images/bg-header.png);
     background-repeat: no-repeat;
-   
     background-size: cover;
     position: absolute;
     margin-bottom: 20px;
     height: 300px;
-    width: 100%;
+    width: 320px;
+    right: 0;
 
     @include onTablet {
-      // background-position: top right;
-      background-size: contain;
       height: 384px;
       width: 374px;
+      background-size: contain;
       right: 0;
-
     }
 
     @include onDesktop {
