--- a/src/styles/utils/product.scss
+++ b/src/styles/utils/product.scss
@@ -2,7 +2,8 @@
 
   &__photo {
     width: 100%;
-    // object-fit: contain;
+
+    object-fit: cover;
     grid-column: span 2;
     margin-bottom: 16px;
     transition: transform $time-transition;
@@ -21,6 +22,10 @@
       grid-column: 1/8;
       margin-bottom: 104px;
     }
+  }
+
+  &__topic {
+    grid-column: span 6;
   }
 
   &__top {
