--- a/src/styles/utils/slider.scss
+++ b/src/styles/utils/slider.scss
@@ -4,6 +4,7 @@
 
   @include onTablet {
     display: none;
+    opacity: 0;
   }
 
   &__content {
@@ -14,7 +15,8 @@
     grid-column: span 2;
 
     @include onTablet {
-      grid-column: span 6;
+      // grid-column: span 6;
+      display: none;
     }
   }
 }
