--- a/src/styles/utils/footer.scss
+++ b/src/styles/utils/footer.scss
@@ -128,6 +128,25 @@
     }
   }
 
+  &__hover {
+    transition: transform $time-transition;
+    cursor: pointer;
+    margin-top: 20px;
+
+    &:hover {
+      transform: scale(1.07);
+    }
+  }
+
+  &__hovers {
+    transition: transform $time-transition;
+    cursor: pointer;
+
+    &:hover {
+      transform: scale(1.07);
+    }
+  }
+
   &__info {
     color: $color-black-black;
     font-family: "IBM Plex Sans", sans-serif;
@@ -137,7 +156,7 @@
     text-decoration: none;
     transition: transform $time-transition;
     cursor: pointer;
-    transform-origin: right;
+    transform-origin: center;
 
     &:hover {
       transform: scale(1.7);
@@ -150,9 +169,9 @@
     font-size: 14px;
     font-weight: 400;
     line-height: 150%;
-    margin-top: 20px;
+
     text-decoration: none;
-    margin-bottom: 0;
+    margin: 0;
     transition: transform $time-transition;
     cursor: pointer;
 
