--- a/src/styles/utils/image.scss
+++ b/src/styles/utils/image.scss
@@ -1,12 +1,15 @@
 .image {
   display: none;
+  opacity: 0;
 
   @include onTablet {
     display: flex;
+    opacity: 1;
     flex-direction: column;
     position: relative;
     margin-top: 515px;
     padding-block: 0 92px;
+
   }
 
   @include onDesktop {
@@ -87,13 +90,19 @@
   }
 
   &__images {
-    // display: none;
+    display: none;
+    @include onTablet {
+      opacity: 0;
+      display: none;
+    }
 
     @include onDesktop {
       width: 100%;
       object-fit: contain;
       transition: transform $time-transition;
       cursor: pointer;
+      opacity: 1;
+      display: flex;
 
       &:hover {
         transform: scale(1.03);
@@ -131,10 +140,12 @@
     }
 
     &--one {
+
       @include onTablet {
-        grid-column: 1/5;
-        position: absolute;
+        grid-column: span 6;
+        // position: absolute;
         opacity: 0;
+
       }
 
       @include onDesktop {
@@ -147,8 +158,8 @@
 
     &--two {
       @include onTablet {
-        grid-column: 1/5;
-        position: absolute;
+        grid-column: span 6;
+        // position: absolute;
         opacity: 0;
       }
 
@@ -162,8 +173,8 @@
     &--three {
 
       @include onTablet {
-        grid-column: 1/5;
-        position: absolute;
+        grid-column: span 6;
+        // position: absolute;
         opacity: 0;
       }
 
