--- a/src/styles/blocks/galery.scss
+++ b/src/styles/blocks/galery.scss
@@ -1,4 +1,13 @@
 .gallery {
+  
+  @include tab640 {
+    margin-left: 34px;
+  }
+
+  @include desk1280 {
+    margin-left: 55px;
+  }
+  
   &__intro {
     font-family: Montserrat, sans-serif;
     font-weight: 700;
@@ -8,11 +17,13 @@
     line-height: 100%;
     color: #0f0e08;
     position: relative;
+
     @include tab640 {
       margin-top: 88px;
       font-size: 48px;
       text-align: left;
     }
+
   }
   &__pictures {
     padding-top: 40px;
