--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -18,10 +18,13 @@ body {
 
 * {
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
-section {
-  padding: 0 20px;
+.page {
+  &:has(#menu:target) {
+    overflow: hidden;
+  }
 }
 
 .container {
@@ -37,4 +40,9 @@ section {
     padding: 0 55px;
     margin: 0;
   }
+}
+
+.actual {
+  display: flex;
+  justify-content: center;
 }
