--- a/src/styles/blocks/general/_menu.scss
+++ b/src/styles/blocks/general/_menu.scss
@@ -8,7 +8,7 @@
   transform: translateY(-100%);
   background-color: $green-page-color;
   height: 400px;
-  width: 100vw;
+  width: 100%;
 
   @include on-tablet {
     height: 225px;
