add header and menu

--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,6 +1,25 @@
 @mixin hover($_property, $_toValue) {
   transition: #{$_property} 0.3s;
+
   &:hover {
     #{$_property}: $_toValue;
+  }
+}
+
+@mixin page-grid {
+  --columns: 2;
+
+  display: grid;
+  column-gap: 20px;
+  grid-template-columns: repeat(var(--columns), 1fr);
+
+  @media (min-width: $tablet-width) {
+    --columns: 6;
+
+    column-gap: 30px;
+  }
+
+  @media (min-width: $desktop-width) {
+    --columns: 12;
   }
 }
