--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,10 @@
-@import "utils";
+@import "utils/variables";
+@import "utils/mixins";
+@import "utils/extends";
 @import "fonts";
-@import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "general";
+@import "blocks/icon";
+@import "blocks/logo";
+@import "blocks/header";
+@import "blocks/menu";
+@import "blocks/nav";
