--- a/src/styles/blocks/galery.scss
+++ b/src/styles/blocks/galery.scss
@@ -1,5 +1,4 @@
 .gallery {
-  
   @include tab640 {
     margin-left: 34px;
   }
@@ -36,6 +35,7 @@
 
     @include desk1280 {
       padding-top: 56px;
+      display: flex;
     }
   }
 }
