--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -35,8 +35,8 @@
     @include desk1280 {
       display: flex;
       flex-wrap: wrap;
+      justify-content: center;
     }
-
   }
 
   &__slide {
@@ -94,6 +94,7 @@
     position: absolute;
     left: 50%;
     bottom: -20px;
+    z-index: 100;
     width: 9px;
     height: 9px;
     background-color: #e0e0e0;
@@ -122,6 +123,7 @@
     position: absolute;
     left: 50%;
     bottom: 15px;
+    z-index: 6;
     visibility: hidden;
 
     @include desk1280 {
@@ -149,6 +151,9 @@
     }
 
     @include tab640 {
+      &--1:checked ~ .slider__inner > .slider__list {
+        
+      }
 
       &--2:checked ~ .slider__inner > .slider__list {
         left: -20%;
