--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,6 @@
-@import "utils";
-@import "fonts";
-@import "typography";
-
+@import "./utils";
+@import "./fonts";
+@import "./typography";
 @import "./blocks/header.scss";
 @import "./blocks/menu.scss";
 @import "./blocks/actual.scss";
@@ -22,7 +21,7 @@ body {
 }
 
 .page {
-  &:has(#menu:target) {
+  &:has(.menu:target) {
     overflow: hidden;
   }
 }
