--- a/src/styles/utils/slider.scss
+++ b/src/styles/utils/slider.scss
@@ -1,6 +1,7 @@
 .slider {
   margin-top: 485px;
   padding-block: 0 129px;
+  height: 100%;
 
   @include onTablet {
     display: none;
@@ -26,10 +27,6 @@
   width: 100%;
   height: 100%;
   position: absolute;
-}
-
-.swiper-pagination {
-  margin-top: 20px;
 }
 
 .swiper-pagination-bullet {
