add task solution

--- a/src/styles/utils/header.scss
+++ b/src/styles/utils/header.scss
@@ -21,7 +21,7 @@
     position: absolute;
     margin-bottom: 20px;
     height: 300px;
-    width: 320px;
+    width: 100%;
     right: 0;
 
     @include onTablet {
