add some styles for header and basic hero markup

--- a/src/styles/blocks/_icon.scss
+++ b/src/styles/blocks/_icon.scss
@@ -6,15 +6,21 @@
   background-position: center;
   background-size: cover;
 
+  @media (min-width: $desktop-width) {
+    @include basic-interactive-styles;
+  }
+
   &--burger {
     background-image: url(../images/icons/icon-burger.svg);
 
-    &:hover {
-      background-image: url(../images/icons/icon-burger-hover.svg);
-    }
+    // &:hover {
+    //   background-image: url(../images/icons/icon-burger-hover.svg);
+    // }
   }
 
   &--close {
     background-image: url(../images/icons/icon-close.svg);
+
+    @include basic-interactive-styles($color-light);
   }
 }
