--- a/src/styles/blocks/logo.scss
+++ b/src/styles/blocks/logo.scss
@@ -1,6 +1,11 @@
 .logo {
   display: flex;
 
+
+  @media (min-width: $desktop-width) {
+    @include basic-interactive-styles;
+  }
+
   &__img {
     height: 61px;
   }
