--- a/src/styles/_general.scss
+++ b/src/styles/_general.scss
@@ -42,11 +42,13 @@
 
   @media (min-width: $tablet-width) {
     max-width: 690px;
+    padding: 0;
     margin: 0 auto;
   }
 
   @media (min-width: $desktop-width) {
     max-width: 1170px;
+    padding: 0;
   }
 }
 
