--- a/src/styles/blocks/_nav.scss
+++ b/src/styles/blocks/_nav.scss
@@ -8,10 +8,59 @@
     align-items: center;
     grid-template-columns: repeat(2, 1fr);
     gap: 24px 28px;
+
+    @media (min-width: $tablet-width) {
+      gap: 24px 20px;
+    }
+
+    @media (min-width: $desktop-width) {
+      gap: 30px 115px;
+    }
+  }
+
+  &__item {
+    max-width: 100px;
+
+    @media (min-width: $desktop-width) {
+      max-width: 85px;
+    }
   }
 
   &__link {
+    display: block;
+    width: fit-content;
     color: inherit;
     text-decoration: none;
+    position: relative;
+    border-radius: 10px;
+    transition: box-shadow 0.5s;
+
+    &::before {
+      content: '';
+      position: absolute;
+      bottom: -7px;
+      border-radius: 50%;
+      height: 1px;
+      width: 100%;
+      background-color: $color-light;
+
+      transition: transform 0.5s;
+      transform: scale(0);
+      transform-origin: left;
+    }
+
+    @media (min-width: $desktop-width) {
+      font-size: 22px;
+      line-height: 100%;
+
+      &:hover::before {
+        transform: scale(1);
+      }
+
+      &:focus {
+        outline: transparent;
+        box-shadow: 0 0 0 2px $color-light;
+      }
+    }
   }
 }
