--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,5 @@
 @import "utils/variables";
 @import "utils/mixins";
-@import "utils/extends";
 @import "fonts";
 @import "general";
 @import "blocks/icon";
@@ -8,3 +7,5 @@
 @import "blocks/header";
 @import "blocks/menu";
 @import "blocks/nav";
+@import "blocks/hero";
+@import "blocks/btn";
