--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,10 +1,18 @@
-@mixin hover($_property, $_toValue) {
-  transition: #{$_property} 0.3s;
+@mixin basic-interactive-styles($focusColor: $color-accent) {
+  border-radius: 10px;
+  transition: transform 0.5s,
+              box-shadow 0.5s;
 
   &:hover {
-    #{$_property}: $_toValue;
+    transform: scale(1.2);
+  }
+
+  &:focus {
+    outline: transparent;
+    box-shadow: 0 0 0 2px $focusColor;
   }
 }
+
 
 @mixin page-grid {
   --columns: 2;
@@ -15,8 +23,6 @@
 
   @media (min-width: $tablet-width) {
     --columns: 6;
-
-    column-gap: 30px;
   }
 
   @media (min-width: $desktop-width) {
