--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,24 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "./mixins";
+@import "./header";
+@import "./events";
+@import "./lecture";
+@import "./galery";
+@import "./selection";
+@import "./footer";
+@import "./lastpage";
+@import "./effects";
 
 body {
   background: $c-gray;
+  padding: 0;
+  background-color: white;
+  max-width: 1400px;
+  margin: 0 auto;
+}
+
+html {
+  scroll-behavior: smooth;
 }
