--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -243,4 +243,243 @@
         line-height: 14px;
         font-weight: 700;
     }
+
+    &__exit {
+        background-image: url(../images/exit.svg);
+        height: 24px;
+        width: 24px;
+        margin: 27px 0 0;
+        grid-column: 1;
+        margin-left: 20px;
+
+        @include ontablet {
+            margin: 39px 0 0 38px;
+        }
+
+        @include ondesktop {
+            margin: 40px 0 0 56px;
+        }
+    }
+
+    &__fullscreen {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 410px;
+      background-color: #1A5A4C;
+      z-index: 9999;
+
+      @include ontablet {
+        height: 225px;
+      }
+
+      @include ondesktop {
+        height: 233px;
+        max-width: 1400px;
+        top: 0;
+        left: 50%;
+        transform: translateX(-50%);
+      }
+    }
+
+    &__flex {
+      display: flex;
+      justify-content: space-between;
+    }
+
+    &__fullpodii {
+        font-family: 'IBM Plex Sans', sans-serif;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 16px;
+        color: #fff;
+        text-decoration: none;
+        margin-top: 24px;
+        width: fit-content;
+    }
+
+    &__fullblock {
+        display: flex;
+        flex-direction: column;
+    }
+
+    &__fullgalery {
+      font-family: 'IBM Plex Sans', sans-serif;
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 16px;
+      color: #fff;
+      text-decoration: none;
+      margin-top: 27px;
+      width: fit-content;
+
+        @include ontablet {
+            margin-top: 40px;
+        }
+
+        @include ondesktop {
+            margin-top: 40px;
+        }
+    }
+
+    &__fullblock2 {
+      display: flex;
+      flex-direction: column;
+      margin-right: 65px;
+    }
+
+    &__fullaboutas {
+      font-family: 'IBM Plex Sans', sans-serif;
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 16px;
+      color: #fff;
+      text-decoration: none;
+      margin-top: 27px;
+      width: fit-content;
+
+      @include ontablet {
+        margin-top: 40px;
+      }
+
+      @include ondesktop {
+        margin-top: 40px;
+    }
+    }
+
+    &__fullcontact {
+      font-family: 'IBM Plex Sans', sans-serif;
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 16px;
+      color: #fff;
+      text-decoration: none;
+      margin-top: 24px;
+      width: fit-content;
+    }
+
+    &__fullhr {
+        width: 100%;
+        margin-top: 30px;
+        grid-column: 1 / -1;
+
+        @include ontablet {
+            display: none;
+        }
+
+        @include ondesktop {
+            display: none;
+          }
+    }
+
+    &__fullgridblock {
+        @include maingrid;
+
+        @include ontablet {
+            display: none;
+        }
+    }
+
+    &__fullgraphik {
+      grid-column: 1;
+      margin-top: 24px;
+      font-family: 'IBM Plex Sans', sans-serif;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 19.69px;
+      color: #fff;
+
+      @include ontablet {
+        display: none;
+      }
+
+      @include ondesktop {
+        display: none;
+      }
+    }
+
+    &__fulltime {
+      font-family: 'IBM Plex Sans', sans-serif;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 21px;
+      color: #fff;
+      grid-column: 1;
+
+      @include ondesktop {
+        display: none;
+      }
+    }
+
+    &__fullvihid {
+      font-family: 'IBM Plex Sans', sans-serif;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 21px;
+      color: #fff;
+      grid-column: 1 / -1;
+      margin: 0;
+
+      @include ontablet {
+        display: none;
+      }  
+
+      @include ondesktop {
+        display: none;
+      }
+    }
+
+    &__fullhr2 {
+        width: 1px;
+        height: 145px;
+        margin: 0;
+        margin-top: 40px;
+
+        @include onmobile {
+            display: none;
+        }
+    }
+
+    &__fullvihid2 {
+        max-width: 144px;
+        font-family: 'IBM Plex Sans', sans-serif;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 21px;
+        color: white;
+        margin-top: 72px;
+        margin-right: 35px;
+
+        @include onmobile {
+            display: none;
+        }
+    }
+
+    &__fullgraphik2 {
+        margin-top: 40px;
+        font-family: 'IBM Plex Sans', sans-serif;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 19.69px;
+        color: #fff;
+
+        @include onmobile {
+            display: none;
+        }
+    }
+
+    &__fulltime2 {
+      font-family: 'IBM Plex Sans', sans-serif;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 21px;
+      color: #fff;
+      grid-column: 1;
+
+      @include onmobile {
+        display: none;
+      }
+    }
 }
