--- a/src/styles/effects.scss
+++ b/src/styles/effects.scss
@@ -107,3 +107,13 @@
         cursor: pointer;
     }
 }
+
+.header__exit {
+  transform: scale(1);
+  transition: transform 0.3s ease;
+
+  &:hover {
+    transform: scale(1.1);
+    cursor: pointer;
+  }
+}
