--- a/src/styles/lastpage.scss
+++ b/src/styles/lastpage.scss
@@ -16,6 +16,11 @@
         }
     }
 
+    &__fix {
+        text-decoration: none;
+        color: #0F0E08;
+    }
+
     &__logo {
         grid-column: 1;
         width: 62.9px;
@@ -144,6 +149,9 @@
         grid-column: 1 / -1;
         width: 100%;
         margin: 20px 0 0;
+        border-bottom: none;
+        border-right: none;
+        border-left: none;
 
         @media (min-width: 769px) and (max-width: 1280px) {
             display: none;
@@ -275,6 +283,12 @@
         }
     }
 
+    &__fix {
+        text-decoration: none;
+        color: #0F0E08;
+    }
+
+
     &__timeblock {
         grid-column: 2 / 4;
 
@@ -397,6 +411,10 @@
         font-size: 14px;
         line-height: 19.69px;
 
+        @include ontablet {
+            max-width: 220px;
+        }
+
         @include onmobile {
             display: none;
         }
@@ -410,6 +428,9 @@
 
         @include ondesktop {
             width: 1px;
+            border-bottom: none;
+            border-right: none;
+            border-top: none;
             grid-column: 7;
             margin-left: auto;
             margin-right: auto;
