--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -231,6 +231,9 @@
         width: 70px;
         background-color: #1A5A4C;
         margin-top: 20px;
+        border-right: none;
+        border-left: none;
+        border-bottom: none;
     }
 
     &__podii {
@@ -277,7 +280,6 @@
 
       @include ondesktop {
         height: 233px;
-        max-width: 1400px;
         top: 0;
         left: 50%;
         transform: translateX(-50%);
@@ -364,6 +366,9 @@
         width: 100%;
         margin-top: 30px;
         grid-column: 1 / -1;
+        border-right: none;
+        border-left: none;
+        border-top: none;
 
         @include ontablet {
             display: none;
@@ -432,7 +437,10 @@
     }
 
     &__fullhr2 {
-        width: 1px;
+        width: fit-content;
+        border-left: none;
+        border-top: none;
+        border-bottom: none;
         height: 145px;
         margin: 0;
         margin-top: 40px;
