--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,11 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "page";
+@import "header";
+@import "actuell";
+@import "icons";
+@import "menu";
 
 body {
   background: $c-gray;
