--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -4,3 +4,49 @@
     #{$_property}: $_toValue;
   }
 }
+
+@mixin onTablet {
+  @media (min-width: $tablet-min-width) {
+    @content;
+  }
+}
+
+@mixin onDesktop {
+  @media (min-width: $desktop-min-width) {
+    @content;
+  }
+}
+
+@mixin contentPaddingInline() {
+  padding-inline: 20px;
+
+  @include onTablet() {
+    padding-inline: 39px;
+  }
+
+  @include onDesktop() {
+    max-width: 1440px;
+    padding-inline: 55px;
+    margin: 0 auto;
+  }
+}
+
+.container {
+  @include ContentPaddingInline();
+}
+
+@mixin PageGrid {
+  --columns: 2;
+  display: grid;
+  column-gap: 20px;
+  grid-template-columns: repeat(var(--columns), 1 fr);
+
+  @include onTablet() {
+    --columns: 6;
+    column-gap: 30px;
+  }
+
+  @include onDesktop() {
+    --columns: 12;
+  }
+}
