--- a/src/styles/blocks/_page.scss
+++ b/src/styles/blocks/_page.scss
@@ -1,8 +1,9 @@
 .page {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 
   &__header {
-    @keyframes slideDown {
+    @keyframes slide-down {
       from {
         opacity: 0;
         transform: tarslatey(-25%);
