--- a/src/styles/blocks/_slider.scss
+++ b/src/styles/blocks/_slider.scss
@@ -42,6 +42,10 @@
       width: 340px;
       height: 543px;
     }
+
+    @include onDesktop {
+      grid-column: span 4;
+    }
   }
 
   &__pagination {
@@ -75,8 +79,6 @@
       &:hover {
         background-color: $colorGreen;
       }
-
-
     }
   }
 }
