--- a/src/styles/blocks/_gallery.scss
+++ b/src/styles/blocks/_gallery.scss
@@ -32,58 +32,70 @@
     }
   }
 
-
-  &__image {
+  &__img {
     display: none;
 
     @include onDesktop {
-      display: flex;
-      flex-flow: row wrap;
-      gap: 30px;
+      display: block;
+      width: 100%;
+      height: 100%;
+      &:hover {
+        transform: scale(1.05);
+        transition: all 0.3s;
+      }
+    }
+  }
+
+  &__slide {
+    display: none;
+
+    @include onDesktop {
+      display: block;
+      min-width: 100%;
+      height: 543px;
+    }
+
+    &-2,
+    &-3,
+    &-4 {
+      display: none;
+
+      @include onDesktop {
+        display: block;
+      }
     }
 
     &-1 {
-      width: 370px;
-      height: 600px;
-
-      &:hover {
-        @include transformElement;
-
-        transition: all .3s;
+      @include onDesktop {
+        grid-area: 1 / 1 / 2 / 2;
       }
     }
 
     &-2 {
-      width: 770px;
-      height: 600px;
-
-      &:hover {
-        @include transformElement;
-
-        transition: all .3s;
+      @include onDesktop {
+        margin-left: 0;
+        grid-area: 1 / 2 / 2 / -1;
       }
     }
 
     &-3 {
-      width: 770px;
-      height: 360px;
-
-      &:hover {
-        @include transformElement;
-
-        transition: all .3s;
+      @include onDesktop {
+        grid-area: 2 / 1 / 3 / 3;
       }
     }
+  }
 
-    &-4 {
-      width: 370px;
-      height: 360px;
+  &__desktop {
+    display: none;
 
-      &:hover {
-        @include transformElement;
+    @include onDesktop {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
 
-        transition: all .3s;
-      }
+      gap: 30px;
+      width: 100%;
+      justify-items: stretch;
+      overflow: hidden;
     }
   }
 }
