fixed position logo? add #home, centred section gallery and fixed footer buttom

--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -10,12 +10,13 @@
   }
 
   &__wrapper {
+    display: flex;
+    justify-content: center;
     position: absolute;
-    text-align: center;
     width: 100vw;
 
     @include onTablet {
-      text-align: left;
+      justify-content: left;
       width: 50vw;
       margin-left: 50vw;
       height: 384px;
@@ -104,6 +105,12 @@
 
       max-width: 320px;
       height: 50px;
+
+      &:hover {
+        @include transformElement;
+
+        transition: all .3s;
+      }
 
       @include onTablet {
         height: 70px;
