fixed owerfloy-x gallery

--- a/src/styles/blocks/_slider.scss
+++ b/src/styles/blocks/_slider.scss
@@ -3,8 +3,10 @@
   min-width: 280px;
   height: 410px;
   overflow: hidden;
+  margin-left: 20px;
 
   @include onTablet {
+    margin-left: 34px;
     min-width: 700px;
     height: 543px;
   }
@@ -21,7 +23,6 @@
     gap: 20px;
 
     max-width: 100%;
-    overflow-x: auto;
     list-style: none;
     width: 1120px;
 
@@ -40,6 +41,10 @@
     align-items: center;
 
     max-width: 280px;
+
+    @include onTablet {
+      max-width:  348px;
+    }
   }
 
   &__image {
