--- a/src/styles/blocks/_button.scss
+++ b/src/styles/blocks/_button.scss
@@ -21,7 +21,7 @@
     height: 49px;
     background-color: $colorGreen;
 
-    background-image: url(../images/arrow_black.svg);
+    background-image: url(../images/arrow_light.svg);
     background-repeat: no-repeat;
     background-position: center;
     flex-shrink: 0;
