--- a/src/styles/blocks/_event.scss
+++ b/src/styles/blocks/_event.scss
@@ -40,9 +40,8 @@
     height: 210px;
 
     &:hover {
-      @include transformElement;
-
-      transition: all .3s;
+      transform: scale(1.05);
+      transition: all 0.3s;
     }
 
     @include onTablet {
