--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -26,6 +26,9 @@
       height: 655px;
     }
 
+    &__logo {
+       cursor: pointer;
+    }
     &--image {
       display: block;
       width: 100%;
