--- a/src/styles/blocks/_page.scss
+++ b/src/styles/blocks/_page.scss
@@ -25,10 +25,12 @@
     right: 0;
     z-index: 3;
     transform: translateX(100%);
+    transition: all .5s ease-out;
 
     &:target {
       opacity: 1;
       transform: translateX(0);
+      transition: all .5s ease;
     }
   }
 }
