added #home in logo link, fixed hover efect for pictures, fixed stretched in pictures, fixed collor in  arra header button, add menu open smoothly, and fixde horozintal gap in menu

--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -32,22 +32,21 @@
   }
 
   &__schedule {
-    grid-column: span 1;
+    display: flex;
+    gap: 20px;
     padding-top: 40px;
 
     @include onTablet {
-      grid-column: span 2;
+      grid-column: span 4;
       padding-top: 0;
     }
   }
 
   &__contacts {
-    grid-column: span -1;
-    padding-top: 40px;
+    width: 128px;
 
     @include onTablet {
-      grid-column: span 2;
-      padding-top: 0;
+      width: 220px;
     }
 
     @include onDesktop {
@@ -93,6 +92,7 @@
     line-height: 140%;
 
     @include onTablet {
+      grid-column: 2/3;
       padding-top: 120px;
       flex-direction: row;
       justify-content: space-between;
