--- a/src/styles/blocks/_nav.scss
+++ b/src/styles/blocks/_nav.scss
@@ -49,7 +49,7 @@
   grid-column: span 2;
 
   @include onTablet {
-    grid-column: 2/5;
+    grid-column: 2/3;
   }
 
   @include onDesktop {
@@ -60,12 +60,22 @@
   &__list {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    width: 220px;
     gap: 24px 20px;
 
     list-style: none;
     margin: 0;
     padding: 0;
 
+    @include onDesktop {
+      gap: 32px 20px;
+    }
+  }
+
+  &__item {
+    @include onTablet {
+      width: 220px;
+    }
   }
 
   &__link {
