--- a/src/styles/blocks/_gallery.scss
+++ b/src/styles/blocks/_gallery.scss
@@ -38,7 +38,8 @@
     @include onDesktop {
       display: block;
       width: 100%;
-      height: 100%;
+      height: auto;
+
       &:hover {
         transform: scale(1.05);
         transition: all 0.3s;
@@ -52,7 +53,7 @@
     @include onDesktop {
       display: block;
       min-width: 100%;
-      height: 543px;
+      height: auto;
     }
 
     &-2,
